--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18next": "^22.4.15",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-i18next": "^12.2.2",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "reactstrap": "^9.1.9",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
