--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "i18next": "^22.4.15",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.1.9",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
