--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "i18next": "^22.4.15",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
