--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
     "react-lightbox-pack": "^0.1.5",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.0"
   }
 }
