--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.22.0",
     "i18next": "^22.4.15",
     "jquery": "^3.6.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
@@ -21,10 +22,12 @@
     "react-icons": "^4.8.0",
     "react-lightbox-pack": "^0.1.5",
     "react-lightgallery": "^0.9.0",
+    "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.9",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
