--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "firebase": "^9.22.0",
     "i18next": "^22.4.15",
     "jquery": "^3.6.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-helmet": "^6.1.0",
@@ -22,6 +24,7 @@
     "react-icons": "^4.8.0",
     "react-lightbox-pack": "^0.1.5",
     "react-lightgallery": "^0.9.0",
+    "react-modal": "^3.16.1",
     "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
