--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.0",
     "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
     "jquery": "^3.6.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
